Fix horizontal overflow in iterations list

--- a/app/css/components/iterations-footer.css
+++ b/app/css/components/iterations-footer.css
@@ -12,6 +12,7 @@
     & .iterations {
         @apply flex flex-grow items-center;
         @apply mr-24;
+        overflow-x: auto;
 
         & .iteration {
             height: 32px;
